fix overflow-x

--- a/style/style.css
+++ b/style/style.css
@@ -251,6 +251,7 @@ footer .awals .awal a {
 @media screen and (max-width: 768px) {
   header {
     justify-content: space-between;
+    overflow-x: hidden;
   }
 
   nav {
